# Hannah

./: .gitignore  README.md  ROADMAP.md  configure_satellite-pi.sh  create_satellite-base-pi.sh  list_devices.py  mqtt_publish.py  send_wav.py
core/: config.example.yaml  main.py  requirements.txt  routines.yaml
core/deploy/: auto-deploy.sh  hannah-auto-deploy.service  hannah-auto-deploy.timer  hannah.service  install.sh
core/hannah/: audio.py  car_tracker.py  config.py  conversation.py  grpc_server.py  iobroker.py  llm.py  memory.py  mqtt_handler.py  nlu.py  residents.py  routines.py  stt.py  trigger_engine.py  tts.py  udp_server.py  user_registry.py  weather.py
core/proto/: gen_proto.sh  hannah.proto
iobroker.hannah-notification/: INSTALL.md  io-package.json  main.js  package.json
iobroker.hannah-notification/admin/: index.html  jsonConfig.json
proxy/: Makefile  config.example.yaml  gen_proto.sh  go.mod  go.sum
proxy/deploy/: hannah-proxy.service  install.sh
proxy/proto/: hannah.proto
satellite-esp/: .gitignore  CMakeLists.txt  ENTWICKLUNG.md  sdkconfig.defaults
satellite-esp/components/microfrontend/: CMakeLists.txt
satellite-esp/hardware/: BOM.md
satellite-esp/main/: CMakeLists.txt  main.c
satellite-pi/: install.sh  requirements.txt  satellite.py  test_wakeword.py
satellite-pi/models/: hannah.onnx
scripts/: gen_proto.sh
telegram/: .gitignore  config.yaml  main.py  requirements.txt
telegram/deploy/: hannah-telegram.service  install.sh
voiceid/: app.py  config.yaml  enroll_voice.py  install_hannah_voice.sh
voiceid/deploy/: install.sh  (+2 more)
(+36 files in other folders)
